--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
@@ -147,7 +147,7 @@
                         <div class="col-8">
                             <kt-uplod-preview-image [type]="'formField'" [formFieldName]="'passbookCopy'"
                                 [fileAcceptType]="'image/x-png,image/jpeg,image/jpg'" [action]="'remove'"
-                                (upload)="uploadImage($event)" (remove)="removeImage($event)">
+                                [reason]="'cancelOrder'" (upload)="uploadImage($event)" (remove)="removeImage($event)">
                             </kt-uplod-preview-image>
                             <input type="text" formControlName="passbookCopy" class="form-control"
                                 [class.isError]="controls.passbookCopy.touched && controls.passbookCopy.invalid" hidden>
@@ -163,7 +163,7 @@
                             <label class="font-weight-500 text-color">Passbook Copy</label>
                         </div>
                         <div class="col-8">
-                            <a class="text-body" [href]="refundData.passbookCopy.url"
+                            <a class="text-body" [href]="refundData.passbookCopy.URL"
                                 download="{{refundData.passbookCopy.originalname}}" target="_blank">
                                 <span>{{refundData.passbookCopy.originalname}}</span>
                                 <span class="pl-2">
@@ -179,7 +179,7 @@
                         <div class="col-8">
                             <kt-uplod-preview-image [type]="'formField'" [formFieldName]="'checkCopy'"
                                 [fileAcceptType]="'image/x-png,image/jpeg,image/jpg, .pdf'" [action]="'remove'"
-                                (upload)="uploadImage($event)" (remove)="removeImage($event)">
+                                [reason]="'cancelOrder'" (upload)="uploadImage($event)" (remove)="removeImage($event)">
                             </kt-uplod-preview-image>
                             <input type="text" formControlName="checkCopy" class="form-control"
                                 [class.isError]="controls.checkCopy.touched && controls.checkCopy.invalid" hidden>
@@ -194,7 +194,7 @@
                             <label class="font-weight-500 text-color">Cheque Copy</label>
                         </div>
                         <div class="col-8">
-                            <a class="text-body" [href]="refundData.checkCopy.url"
+                            <a class="text-body" [href]="refundData.checkCopy.URL"
                                 download="{{refundData.checkCopy.originalname}}" target="_blank">
                                 <span>{{refundData.checkCopy.originalname}}</span>
                                 <span class="pl-2">
