--- a/gold-admin-frontend/src/app/views/pages/broker/profile/profile.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/profile/profile.component.html
@@ -84,8 +84,8 @@
                     </div>
                     <div class="col font-weight-500">
                         <span class="text-primary kt-pointer"
-                            *ngIf="profileDetails?.brokerData.broker.panCardDetails.url;else elseBlock"
-                            (click)="open(profileDetails.brokerData.broker.panCardDetails.url)">View Attachment</span>
+                            *ngIf="profileDetails?.brokerData.broker.panCardDetails.URL;else elseBlock"
+                            (click)="open(profileDetails.brokerData.broker.panCardDetails.URL)">View Attachment</span>
                     </div>
                 </div>
                 <div class="row kt-margin-t-15">
