--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-view/order-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-view/order-details-view.component.html
@@ -47,21 +47,21 @@
                                 {{ logs?.trackingId ? logs?.trackingId : "-" }}
                             </td>
                             <td>
-                                <div *ngIf="logs.uploadedAwbFile?.url; else elseBlock" class="d-inline-flex">
+                                <div *ngIf="logs.uploadedAwbFile?.URL; else elseBlock" class="d-inline-flex">
                                     <div>{{
 										logs?.uploadedAwbFile?.originalname
 									}}</div>&nbsp;
-                                    <a href="{{ logs?.uploadedAwbFile?.url }}" target="_blank" download="{{
+                                    <a href="{{ logs?.uploadedAwbFile?.URL }}" target="_blank" download="{{
 										logs?.uploadedAwbFile?.originalname
 									}}"><img src="assets/media/icons/_download.svg" alt="" width="14px" /></a>
                                 </div>
                             </td>
                             <td>
-                                <div *ngIf="logs.uploadedAwbBox?.url; else elseBlock" class="d-inline-flex">
+                                <div *ngIf="logs.uploadedAwbBox?.URL; else elseBlock" class="d-inline-flex">
                                     <div> {{
 										logs?.uploadedAwbBox?.originalname
 									}}</div>&nbsp;
-                                    <a href="{{ logs?.uploadedAwbBox?.url }}" target="_blank" download="{{
+                                    <a href="{{ logs?.uploadedAwbBox?.URL }}" target="_blank" download="{{
 										logs?.uploadedAwbBox?.originalname
 									}}"><img src="assets/media/icons/_download.svg" alt="" width="14px" /></a>
                                 </div>
