--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
@@ -194,7 +194,7 @@
                     <div class="col-3 text-muted">Passbook Copy :</div>
                     <div class="col image-text-truncate" *ngIf="refundData?.passbookCopy?.originalname">
                         {{refundData?.passbookCopy?.originalname}}&nbsp;&nbsp;<a
-                            href="{{refundData?.passbookCopy?.url}}" target="_blank"
+                            href="{{refundData?.passbookCopy?.URL}}" target="_blank"
                             download="{{refundData?.passbookCopy?.originalname}}"><img
                                 src="assets/media/icons/_download.svg" alt="" width="16px"></a></div>
                     <div class="col-2"></div>
@@ -206,7 +206,7 @@
                 <div class="row">
                     <div class="col-3 text-muted">Cheque Copy :</div>
                     <div class="col image-text-truncate" *ngIf="refundData?.checkCopy?.originalname">
-                        {{refundData?.checkCopy?.originalname}}&nbsp;&nbsp;<a href="{{refundData?.checkCopy?.url}}"
+                        {{refundData?.checkCopy?.originalname}}&nbsp;&nbsp;<a href="{{refundData?.checkCopy?.URL}}"
                             target="_blank" download="{{refundData?.passbookCopy?.originalname}}"><img
                                 src="assets/media/icons/_download.svg" alt="" width="16px"></a></div>
                 </div>
