bug fixes in holiday

--- a/gold-admin-frontend/src/app/views/pages/admin/holidays/holiday-list/holiday-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/holidays/holiday-list/holiday-list.component.html
@@ -5,7 +5,7 @@
 
                 <ng-container matColumnDef="holidayDate">
                     <mat-header-cell *matHeaderCellDef>Holiday Date</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.holidayDate}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.holidayDate | date: 'mediumDate'}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="description">
