--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -42,7 +42,7 @@
                             <label class="text-color kt-padding-l-10">KYC Status</label>
                         </div>
                         <div class="col-6">
-                            <input type="text" class="form-control" formControlName="kycStatus" readonly>
+                            <input type="text" class="form-control text-capitalize" formControlName="kycStatus" readonly>
                         </div>
                     </div>
                 </div>
