--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/add-appraiser/add-appraiser.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/add-appraiser/add-appraiser.component.html
@@ -18,7 +18,7 @@
                     <div class="col-lg-12 kt-margin-bottom-20-mobile">
 
 
-                        <div class="row">
+                        <div class="row" *ngIf="data.from != 'lead'">
                             <!-- Partner Name -->
                             <div class="col-4 form-label">
                                 <label class="mandatory kt-padding-l-10">Customer Id</label>
@@ -53,7 +53,7 @@
                             </div>
                         </div>
 
-                        <div class="row kt-padding-t-15">
+                        <div class="row "[class.kt-padding-t-15]="data.from != 'lead'">
                             <div class="col-4 form-label">
                                 <label class="mandatory kt-padding-l-10">Customer Name</label>
                             </div>
