done date bug fixes

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -40,7 +40,7 @@
                         </kt-bank-details>
                     </mat-tab>
                     <mat-tab label="Loan Status Approval" [disabled]="disabled[5]">
-                        <kt-approval (apply)="apply()" [action]="action"
+                        <kt-approval  [action]="action"
                              [disable]="disabledForm" [details]="customerDetail" [loanId]="loanId">
                         </kt-approval>
                     </mat-tab>
