--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -2,10 +2,9 @@
 
     <kt-portlet-body>
 
-        <button mat-icon-button class="btn-transparent" ngbDropdown>
+        <!-- <button mat-icon-button class="btn-transparent" ngbDropdown>
             <a class="nav-link" style="cursor: pointer" ngbDropdownToggle id="navbarDropdown2" role="button">
                 <img src="../../../../../../assets/media/icons/options.svg" alt="">
-                <!-- <mat-icon>more_vert</mat-icon> -->
             </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
                 <a ngbDropdownItem (click)="viewLoan()">View </a>
@@ -15,7 +14,7 @@
                 <a ngbDropdownItem (click)="partRelease()">Part Release</a>
                 <a ngbDropdownItem (click)="new()">Add New Loan</a>
             </div>
-        </button>
+        </button> -->
         <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
 
@@ -99,7 +98,7 @@
                             <div ngbDropdownMenu aria-labelledby="navbarDropdown2"
                                 class="dropdown-menu dropdown-menu-right">
                                 <a ngbDropdownItem (click)="viewLoan(loan)">View Loan</a>
-                                <a ngbDropdownItem (click)="$event.preventDefault()">Pay Interest EMI</a>
+                                <a ngbDropdownItem (click)="interestEmi(loan)">Pay Interest EMI</a>
                                 <a ngbDropdownItem (click)="topUp(loan)">Top Up</a>
                                 <a ngbDropdownItem (click)="partPayment(loan)">Part Payment</a>
                                 <a ngbDropdownItem (click)="partRelease(loan)">Part Release</a>
