bug fixe of calcultion pan type and broker

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -74,7 +74,7 @@
                             <label class="text-color kt-padding-l-10">Form 60</label>
                         </div>
                         <div class="col-6">
-                            <img [src]="controls.panImage.value" height="80" width="60" alt="">
+                            <img [src]="controls.panImage.value" (click)="preview(controls.panImage.value)" height="150" width="80" alt="">
                         </div>
                     </div>
                 </div>
