--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/broker/broker-list/broker-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/broker/broker-list/broker-list.component.scss
@@ -4,7 +4,10 @@
         padding-left: 5px !important;
     }
     .mat-column-storeId{
-        flex: 0 0 9% !important;
+        flex: 0 0 8% !important;
+    }
+    .mat-column-brokerId{
+        flex: 0 0 7% !important;
     }
     .mat-column-mobileNumber{
         flex: 0 0 8% !important;
@@ -14,7 +17,7 @@
         word-break: break-all;
     }
     .mat-column-mobileNumber{
-        flex: 0 0 7% !important;
+        flex: 0 0 6% !important;
     }
     .mat-column-address{
         flex: 0 0 10% !important;
@@ -26,15 +29,15 @@
         flex: 0 0 10% !important;
     }
     .mat-column-pincode{
-        flex: 0 0 6% !important;
+        flex: 0 0 5% !important;
     }
     .mat-column-approvalStatus{
-        flex: 0 0 9% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-status{
         flex: 0 0 4% !important;
     }
     .mat-column-action{
-        flex: 0 0 8% !important;
+        flex: 0 0 6% !important;
     }
 }
