chnage in lead and applied kyc

--- a/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
@@ -30,10 +30,12 @@
                         <span class="text-success"
                             *ngIf="role.customerKycClassification?.kycStatusFromCce == 'approved'">
                             {{role.customerKycClassification?.kycStatusFromCce | titlecase}} </span>
-                        <span class="text-warning" *ngIf="role.customerKycClassification?.kycStatusFromCce == 'pending'">
+                        <span class="text-warning"
+                            *ngIf="role.customerKycClassification?.kycStatusFromCce == 'pending'">
                             {{role.customerKycClassification?.kycStatusFromCce | titlecase}}
                         </span>
-                        <span class="text-danger" *ngIf="role.customerKycClassification?.kycStatusFromCce == 'rejected'">
+                        <span class="text-danger"
+                            *ngIf="role.customerKycClassification?.kycStatusFromCce == 'rejected'">
                             {{role.customerKycClassification?.kycStatusFromCce | titlecase}}
                         </span>
                     </mat-cell>
@@ -42,13 +44,18 @@
                 <ng-container matColumnDef="kycStatus">
                     <mat-header-cell *matHeaderCellDef>KYC Status</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <span class="text-success" *ngIf="role.customerKycClassification?.kycStatusFromBm == 'approved'">
+                        <span class="text-success"
+                            *ngIf="role.customerKycClassification?.kycStatusFromBm == 'approved'">
                             {{role.customerKycClassification?.kycStatusFromBm | titlecase}}
                         </span>
                         <span class="text-warning"
                             *ngIf="role.customerKycClassification?.kycStatusFromBm == 'incomplete'">
                             {{role.customerKycClassification?.kycStatusFromBm | titlecase}}
                         </span>
+                        <span class="text-warning"
+                        *ngIf="role.customerKycClassification?.kycStatusFromBm == 'pending'">
+                        {{role.customerKycClassification?.kycStatusFromBm | titlecase}}
+                    </span>
                         <span class="text-danger" *ngIf="role.customerKycClassification?.kycStatusFromBm == 'rejected'">
                             {{role.customerKycClassification?.kycStatusFromBm | titlecase}}
                         </span>
@@ -62,15 +69,13 @@
                             *ngxPermissionsOnly="['appliedKycEdit','customerClassificationEdit']">
                             <div class="kt-pointer" (click)="editKyc(role)" class="kt-pointer">
                                 <span
-                                    *ngIf="(userType == 6 && role.customerKycClassification?.kycStatusFromCce == 'pending') || (userType == 5 && role.customerKycClassification?.kycStatusFromCce == 'approved' && (role.customer.kycStatus == 'rejected' || role.customer.kycStatus == 'pending'))">
+                                    *ngIf="(userType == 6 && role.customerKycClassification?.kycStatusFromCce == 'pending') 
+                                    || (userType == 5 && role.customerKycClassification?.kycStatusFromCce == 'approved' && 
+                                    role.customerKycClassification?.kycStatusFromBm == 'pending')">
                                     <!-- <img src="../../../../assets/media/icons/action.svg"> -->
                                     <strong>Action ></strong>
                                 </span>
                             </div>
-                            <span
-                                *ngIf="(userType == 6 && role.customerKycClassification?.kycStatusFromCce == 'approved') || (userType == 5 && role.kycStatus == 'approved')"></span>
-
-
                         </div>
                     </mat-cell>
                 </ng-container>
