--- a/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
+++ b/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
@@ -1,5 +1,5 @@
 <div *ngIf="type != 'view'" class="position-relative">
-  <img src="../../../../../assets/media/icons/cancel.svg" class="cancel" alt="" (click)="close()">
+  <img src="assets/media/icons/cancel.svg" class="cancel" alt="" (click)="close()">
   <div class="row" [class.kt-padding-l-40,.kt-padding-r-40]="data.modal">
     <div class="col-12">
       <ngb-carousel *ngIf="images.length" [showNavigationArrows]="images?.length > 1">
@@ -19,7 +19,7 @@
       <ngb-carousel *ngIf="viewImages.length" [showNavigationArrows]="viewImages?.length > 1">
         <ng-template ngbSlide *ngFor="let img of viewImages">
           <div class="picsum-img-wrapper">
-            <img [src]="img?.url" alt="Random first slide" class="viewImage text-center">
+            <img [src]="img?.URL" alt="Random first slide" class="viewImage text-center">
           </div>
         </ng-template>
       </ngb-carousel>
