--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -44,8 +44,8 @@
                              [disable]="disabledForm" [details]="customerDetail" [loanId]="loanId">
                         </kt-approval>
                     </mat-tab>
-                    <mat-tab label="Packets" 
-                        *ngIf="url == 'packet-image-upload' || (action == 'edit' && customerDetail.loanPacketDetails.length>0)">
+                    <mat-tab label="Packets" >
+                        <!-- *ngIf="url == 'packet-image-upload' || (action == 'edit' && customerDetail.loanPacketDetails.length>0)"> -->
                         <!-- <ng-template> -->
                             <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab"
                             style="padding:0px !important"> 
