--- a/gold-admin-frontend/src/app/views/pages/auth/sign-up-broker/sign-up-broker.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/sign-up-broker/sign-up-broker.component.html
@@ -126,7 +126,7 @@
 			</div>
 			<div class="row kt-padding-t-15">
 				<div class="col-4">
-					<label class="font-weight-500 text-color">Store Id</label>
+					<label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Store Id</label>
 				</div>
 				<div class="col-8">
 					<input type="text" aria-label="Store ID" placeholder="Store ID" class="form-control"
