--- a/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
+++ b/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
@@ -19,7 +19,7 @@
       <ngb-carousel *ngIf="viewImages.length" [showNavigationArrows]="viewImages?.length > 1">
         <ng-template ngbSlide *ngFor="let img of viewImages">
           <div class="picsum-img-wrapper">
-            <img [src]="img?.url" alt="Random first slide" class="viewImage text-center">
+            <img [src]="img?.URL" alt="Random first slide" class="viewImage text-center">
           </div>
         </ng-template>
       </ngb-carousel>
