--- a/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
@@ -254,7 +254,8 @@
                     <div class="col-6 pl-4">
                         <div class="row">
                             <div class="col-4 align-self-center">
-                                <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">PAN Card Holder Name</label>
+                                <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">PAN Card
+                                    Holder Name</label>
                             </div>
                             <div class="col-8">
                                 <input type="text" aria-label="PAN Card Holder Name" placeholder="PAN Card Holder Name"
@@ -373,7 +374,7 @@
                             </div>
                             <div class="col-6">
                                 <kt-button [value]="'Place Order'" [type]="'submit'" (action)="verifyOTP()"
-                                    [isDisabled]="!finalOrderData"></kt-button>
+                                    [isDisabled]="!(finalOrderData && otpForm?.valid)"></kt-button>
                             </div>
                         </div>
                     </form>
