--- a/gold-admin-frontend/src/app/views/pages/broker/shop/product/product.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shop/product/product.component.html
@@ -5,9 +5,11 @@
         <div class="row card-container mt-4" *ngIf="product">
             <div class="col-md-4">
                 <div class="card p-2">
-                    <img class="mx-auto"
-                        [src]="product.productImage != '0' ? product?.productImage: 'assets/media/icons/image-placeholder.png'"
-                        alt="test" width="275px" height="315px">
+                    <img class="mx-auto" *ngIf="product?.productImages.length == 0"
+                        src="assets/media/icons/image-placeholder.png" alt="test" width="275px" height="315px">
+                    <kt-image-preview-dialog *ngIf="product?.productImages.length" [viewImages]="product.productImages"
+                        [type]="'view'">
+                    </kt-image-preview-dialog>
                 </div>
             </div>
             <div class="col-md-8">
