--- a/gold-admin-frontend/src/app/views/pages/broker/shop/product/product.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/broker/shop/product/product.component.scss
@@ -2,6 +2,7 @@
     .card{
         border-radius: 15px;
         -moz-border-radius: 15px;
+        min-height: 315px;
     }
     table {
         border-collapse: separate;
