image viewer completed

--- a/gold-admin-frontend/src/app/views/pages/broker/shop/product/product.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shop/product/product.component.html
@@ -7,8 +7,8 @@
                 <div class="card p-2">
                     <img class="mx-auto" *ngIf="product?.productImages.length == 0"
                         src="assets/media/icons/image-placeholder.png" alt="test" width="275px" height="315px">
-                    <kt-image-preview-dialog *ngIf="product?.productImages.length" [viewImages]="product.productImages"
-                        [type]="'view'">
+                    <kt-image-preview-dialog *ngIf="product?.productImages.length" [viewImages]="imageArray"
+                        [type]="'view'" clickable="true">
                     </kt-image-preview-dialog>
                 </div>
             </div>
