--- a/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
+++ b/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
@@ -1,6 +1,6 @@
 <div *ngIf="type != 'view'" class="position-relative">
   <img src="../../../../../assets/media/icons/cancel.svg" class="cancel" alt="" (click)="close()">
-  <div class="row" [class.px-40]="!removePadding" >
+  <div class="row" [class.px-40]="!removePadding">
     <div class="col-12">
       <ngb-carousel *ngIf="images.length" [showNavigationArrows]="images?.length > 1">
         <ng-template ngbSlide *ngFor="let img of images">
@@ -17,9 +17,9 @@
   <div class="row kt-padding-l-40 kt-padding-r-40">
     <div class="col-12">
       <ngb-carousel *ngIf="viewImages.length" [showNavigationArrows]="viewImages?.length > 1">
-        <ng-template ngbSlide *ngFor="let img of viewImages">
+        <ng-template ngbSlide *ngFor="let img of viewImages;index as i">
           <div class="picsum-img-wrapper">
-            <img [src]="img?.URL" alt="Random first slide" class="viewImage text-center">
+            <img [src]="img?.URL" alt="Random first slide" (click)="zoom(i)" class="viewImage text-center">
           </div>
         </ng-template>
       </ngb-carousel>
