--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
@@ -16,17 +16,9 @@
             </mat-error>
         </div>
         <div class="col-3">
-            <!-- <select class="form-control packet-dropdown" formControlName="ornamentType"
-                [class.isError]="packetInfo.controls.ornamentType.touched && packetInfo.controls.ornamentType.invalid">
-                <option value="null" [disabled]="true" [selected]="true">Select Ornament</option>
-                <option [value]="ornament.id" [disabled]="ornament.disabled" *ngFor="let ornament of ornamentType">
-                    {{ornament.ornamentType | titlecase}}
-                </option>
-            </select> -->
-
-            <kt-multi-select-search [items]="ornamentType" [multiple]="true" bindLabel="ornamentType"
-                formControlName="ornamentType" [bindValue]="'id'" [style]="true"></kt-multi-select-search>
-
+            <kt-multi-select-search formControlName="ornamentType" [items]="ornamentType" [multiple]="true"
+                [bindLabel]="'ornamentType'" [isClear]="clearData" [placeholder]="'CCE Status'">
+            </kt-multi-select-search>
             <mat-error *ngIf="packetInfo.controls.ornamentType.touched && packetInfo.controls.ornamentType.invalid">
                 <span *ngIf="packetInfo.controls.ornamentType.errors?.required">Field Required</span>
             </mat-error>
@@ -36,105 +28,101 @@
         </div>
     </form>
 </div>
-<div class="pl-5">
-    <mat-tab-group [formGroup]="packetImg">
-        <mat-tab formArrayName="packetsArray" label="" *ngFor="let packet of packets.controls;index as idx">
-            <ng-template mat-tab-label>
-                <span
-                    class="tab-number text-gray">{{packet.controls.packetsName.value.packetUniqueId | uppercase}}</span>
-                <span class="tab-text">{{packet.controls.ornamentsName.value.ornamentType | uppercase}}</span>
-                <img class="removeImageSize kt-padding-l-10 kt-pointer" [src]="'assets/media/icons/cancel.png'"
-                    (click)="deletePacket(idx)" />
-            </ng-template>
-            <div class="row" [formGroupName]="idx">
-                <div class="col-3 ">
-                    <div class="img-container packets" *ngIf="!packet.controls.emptyPacketWithNoOrnament.value"
-                        (click)="webcam(idx,$event,'emptyPacketWithNoOrnament')">
-                        <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
-                    </div>
-                    <img class="packets position-relative" [src]="packet.controls.emptyPacketWithNoOrnament.value"
-                        *ngIf="packet.controls.emptyPacketWithNoOrnament.value">
-                    <img *ngIf="packet.controls.emptyPacketWithNoOrnament.value && url != 'view-loan'"
-                        src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
-                        (click)="webcam(idx,$event,'emptyPacketWithNoOrnament')">
-                    <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Empty Packets with No
-                        Ornaments</label>
-                    <div>
-                        <mat-error
-                            *ngIf="packet.controls.emptyPacketWithNoOrnament.touched && packet.controls.emptyPacketWithNoOrnament.invalid">
-                            Field Required</mat-error>
-                    </div>
-                    <input type="file" class="d-none" #emptyPacketWithNoOrnament
-                        (change)="uploadFile(idx,'emptyPacketWithNoOrnament',$event)">
-                </div>
-                <div class="col-3 ">
-                    <div class="img-container packets" *ngIf="!packet.controls.packetWithAllOrnaments.value"
-                        (click)="webcam(idx,$event,'packetWithAllOrnaments')">
-                        <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
-                    </div>
-                    <img class="packets position-relative" [src]="packet.controls.packetWithAllOrnaments.value"
-                        *ngIf="packet.controls.packetWithAllOrnaments.value">
-                    <img *ngIf="packet.controls.packetWithAllOrnaments.value && url != 'view-loan'"
-                        src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
-                        (click)="webcam(idx,$event,'packetWithAllOrnaments')">
-                    <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Packets with All
-                        Ornaments</label>
-                    <div>
-                        <mat-error
-                            *ngIf="packet.controls.packetWithAllOrnaments.touched && packet.controls.packetWithAllOrnaments.invalid">
-                            Field Required</mat-error>
-                    </div>
-                    <input type="file" class="d-none" #packetWithAllOrnaments
-                        (change)="uploadFile(idx,'packetWithAllOrnaments',$event)">
-                </div>
-                <div class="col-3 ">
-                    <div class="img-container packets" *ngIf="!packet.controls.packetWithSealing.value"
-                        (click)="webcam(idx,$event,'packetWithSealing')">
-                        <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
-                    </div>
-                    <img class="packets position-relative" [src]="packet.controls.packetWithSealing.value"
-                        *ngIf="packet.controls.packetWithSealing.value">
-                    <img *ngIf="packet.controls.packetWithSealing.value && url != 'view-loan'"
-                        src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
-                        (click)="webcam(idx,$event,'packetWithSealing')">
-                    <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Packets with
-                        Sealing</label>
-                    <div>
-                        <mat-error
-                            *ngIf="packet.controls.packetWithSealing.touched && packet.controls.packetWithSealing.invalid">
-                            Field Required</mat-error>
-                    </div>
-                    <input type="file" class="d-none" #packetWithSealing
-                        (change)="uploadFile(idx,'packetWithSealing',$event)">
-
-                </div>
-                <div class="col-3">
-                    <div class="img-container packets" *ngIf="!packet.controls.packetWithWeight.value"
-                        (click)="webcam(idx,$event,'packetWithWeight')">
-                        <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
-                    </div>
-                    <!-- <span class="pos-action"> -->
-                    <img class="packets position-relative" [src]="packet.controls.packetWithWeight.value"
-                        *ngIf="packet.controls.packetWithWeight.value">
-                    <!-- </span> -->
-                    <img *ngIf="packet.controls.packetWithWeight.value && url != 'view-loan'"
-                        src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
-                        (click)="webcam(idx,$event,'packetWithWeight')">
-                    <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Packets with
-                        Weight</label>
-                    <div>
-                        <mat-error
-                            *ngIf="packet.controls.packetWithWeight.touched && packet.controls.packetWithWeight.invalid">
-                            Field Required</mat-error>
-                    </div>
-                    <input type="file" class="d-none" #packetWithWeight
-                        (change)="uploadFile(idx,'packetWithWeight',$event)">
-
-                </div>
+<div  class="row pl-5 py-3" [formGroup]="packetImg">
+    <div formArrayName="packetsArray" class="col-2" *ngFor="let packet of packets.controls;index as idx">
+        <div [formGroupName]="idx" >
+            <div class="form-label">
+                <label class="m-0">{{packet.controls.packetsName.value | uppercase}}</label>
+                <label class="px-2 m-0" [matTooltip]="packet.controls.ornamentsName.value">{{packet.controls.ornamentsName.value | uppercase | truncate:[13,'...'] }}</label>
+                <img src="../../../../../../../assets/media/icons/cancel.png" alt="" height="15">
             </div>
-        </mat-tab>
-    </mat-tab-group>
+        </div>
+    </div>
 </div>
-<div class="text-center save" *ngIf="packets.length > 0">
+    <div class="row pl-5 kt-padding-t-15">
+        <div class="col-3 ">
+            <div class="img-container packets" *ngIf="!packetImg.controls.emptyPacketWithNoOrnament.value"
+                (click)="webcam(idx,$event,'emptyPacketWithNoOrnament')">
+                <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
+            </div>
+            <img class="packets position-relative" [src]="packetImg.controls.emptyPacketWithNoOrnament.value"
+                *ngIf="packetImg.controls.emptyPacketWithNoOrnament.value">
+            <img *ngIf="packetImg.controls.emptyPacketWithNoOrnament.value && url != 'view-loan'"
+                src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
+                (click)="webcam(idx,$event,'emptyPacketWithNoOrnament')">
+            <label class="text-center w-100 font-weight-500 pacekts-label text-gray">Empty Packets with No
+                Ornaments</label>
+            <div>
+                <mat-error
+                    *ngIf="packetImg.controls.emptyPacketWithNoOrnament.touched && packetImg.controls.emptyPacketWithNoOrnament.invalid">
+                    Field Required</mat-error>
+            </div>
+            <input type="file" class="d-none" #emptyPacketWithNoOrnament
+                (change)="uploadFile(idx,'emptyPacketWithNoOrnament',$event)">
+        </div>
+        <div class="col-3 ">
+            <div class="img-container packets" *ngIf="!packetImg.controls.packetWithAllOrnaments.value"
+                (click)="webcam(idx,$event,'packetWithAllOrnaments')">
+                <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
+            </div>
+            <img class="packets position-relative" [src]="packetImg.controls.packetWithAllOrnaments.value"
+                *ngIf="packetImg.controls.packetWithAllOrnaments.value">
+            <img *ngIf="packetImg.controls.packetWithAllOrnaments.value && url != 'view-loan'"
+                src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
+                (click)="webcam(idx,$event,'packetWithAllOrnaments')">
+            <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Packets with All
+                Ornaments</label>
+            <div>
+                <mat-error
+                    *ngIf="packetImg.controls.packetWithAllOrnaments.touched && packetImg.controls.packetWithAllOrnaments.invalid">
+                    Field Required</mat-error>
+            </div>
+            <input type="file" class="d-none" #packetWithAllOrnaments
+                (change)="uploadFile(idx,'packetWithAllOrnaments',$event)">
+        </div>
+        <div class="col-3 ">
+            <div class="img-container packets" *ngIf="!packetImg.controls.packetWithSealing.value"
+                (click)="webcam(idx,$event,'packetWithSealing')">
+                <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
+            </div>
+            <img class="packets position-relative" [src]="packetImg.controls.packetWithSealing.value"
+                *ngIf="packetImg.controls.packetWithSealing.value">
+            <img *ngIf="packetImg.controls.packetWithSealing.value && url != 'view-loan'"
+                src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
+                (click)="webcam(idx,$event,'packetWithSealing')">
+            <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Packets with
+                Sealing</label>
+            <div>
+                <mat-error
+                    *ngIf="packetImg.controls.packetWithSealing.touched && packetImg.controls.packetWithSealing.invalid">
+                    Field Required</mat-error>
+            </div>
+            <input type="file" class="d-none" #packetWithSealing (change)="uploadFile(idx,'packetWithSealing',$event)">
+
+        </div>
+        <div class="col-3">
+            <div class="img-container packets" *ngIf="!packetImg.controls.packetWithWeight.value"
+                (click)="webcam(idx,$event,'packetWithWeight')">
+                <img class="placeholder" src="../../../../../assets/media/icons/image-placeholder.png" alt="">
+            </div>
+            <!-- <span class="pos-action"> -->
+            <img class="packets position-relative" [src]="packetImg.controls.packetWithWeight.value"
+                *ngIf="packetImg.controls.packetWithWeight.value">
+            <!-- </span> -->
+            <img *ngIf="packetImg.controls.packetWithWeight.value && url != 'view-loan'"
+                src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
+                (click)="webcam(idx,$event,'packetWithWeight')">
+            <label class="text-center w-100 font-weight-500 pacekts-label text-gray"> Packets with
+                Weight</label>
+            <div>
+                <mat-error
+                    *ngIf="packetImg.controls.packetWithWeight.touched && packetImg.controls.packetWithWeight.invalid">
+                    Field Required</mat-error>
+            </div>
+            <input type="file" class="d-none" #packetWithWeight (change)="uploadFile(idx,'packetWithWeight',$event)">
+
+        </div>
+    </div>
+<div class="text-center">
     <kt-button [type]="'button'" [value]="'Save'" (click)="save()" *ngIf="url != 'view-loan'"></kt-button>
 </div>
