Validation on image in product edit

--- a/gold-admin-frontend/src/app/views/pages/admin/notification-settings/sms-alert/sms-alert-add/sms-alert-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/notification-settings/sms-alert/sms-alert-add/sms-alert-add.component.html
@@ -1,6 +1,6 @@
 <kt-toastr #toastr></kt-toastr>
 <div class="kt-portlet">
-    <kt-modal-header [title]='modalTitle' (action)="action($event)"></kt-modal-header>
+    <kt-modal-header [title]='modalTitle' noTitleCase="true" (action)="action($event)"></kt-modal-header>
     <div *ngIf="data.action != 'view'">
         <div class="kt-portlet__body">
             <div class="kt-form">
