--- a/gold-admin-frontend/src/app/views/partials/components/uplod-preview-image/uplod-preview-image.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/uplod-preview-image/uplod-preview-image.component.html
@@ -4,14 +4,14 @@
     </label>
     <img *ngIf="action == 'remove'" id="remove{{index}}" class="removeImage" [src]="'assets/media/icons/cancel.png'"
         (click)="removeFile($event)" />
-    <input #file id="file-upload{{index}}" type="file" accept="image/*" (change)="uploadFile($event)" />
+    <input #file id="file-upload{{index}}" type="file" accept="image/*" (change)="validateImage($event)" />
 </div>
 
 <div *ngIf="type == 'formField'">
     <label for="custom-file-upload{{formFieldName}}" class="custom-file-upload font-weight-500">
         Attach File
     </label>
-<input #file id="custom-file-upload{{formFieldName}}" type="file" accept="{{fileAcceptType}}" (change)="uploadFile($event)" />
+<input #file id="custom-file-upload{{formFieldName}}" type="file" accept="{{fileAcceptType}}" (change)="validateImage($event)" />
     <div *ngIf="!selectedFile">No file chosen</div>
     <div *ngIf="selectedFile">
         <span class="pr-2">{{selectedFile?.originalname}}</span>
